Juntei o 'Style1.css' com o 'style.css'

--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #2b0b3e;
     color: #ffffff;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .main-nav {
@@ -209,4 +207,59 @@ footer {
 
 .perfil-card:hover img {
     border: 3px solid #fff; 
+}
+
+.body1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #2b0b3e;
+    color: #ffffff;
+}
+.sub {
+    color: #ffffff;
+    padding: 10px; 
+}
+#titulo {
+    color: white;
+    text-align: center;
+}
+
+.divMae{
+    padding: 10px 40px;
+    width: 900px;
+    height: 1100px;
+    background-color: rgb(69, 0, 92);
+    align-items: center;
+    margin: 0 auto;
+
+}
+.container1{
+    display: flex;
+    padding: 10px 40px;
+    width: 860px;
+    height: 410px;
+    align-items: center;
+    gap: 10px;
+
+
+}
+
+.Foto{
+    width: 350px;
+    height: 350px;
+    padding: 40px; 
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+p{
+    color: #ffffff;
+    padding: 5px; 
+}
+
+ol{
+    color: white;
+}
+
+ul{
+    color: white;
 }
