--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #2b0b3e;
     color: #ffffff;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
 }
 
 .main-nav {
